# BASM_sunet

./: .gitmodules  README.md
octave_light_slave/src/: main.cpp
octave_lightbar_master/: pyproject.toml
octave_lightbar_master/octave_lightbar_master/: barapp.py
octave_lightbar_master/octave_lightbar_master/src/: RS485Manager.py
octave_lightbar_master/tests/: ut_ESP32_hs.py  ut_NeoPixelCTRL.py  ut_RS485Manager.py
octave_lightbar_slave/: platformio.ini
octave_lightbar_slave/data/: balloon.csv  calibration.csv  coastline.csv  sunset.csv
octave_lightbar_slave/include/: RS485_bus.h  ledcontroller.h
octave_lightbar_slave/src/: RS485_bus.cpp  ledcontroller.cpp  main.cpp
sunet_virtual_env/: pyproject.toml
sunet_virtual_env/sunet_virtual_env/src/: RS485Manager.py  ut_RS485Manager.py
sunet_virtual_env/tests/: ut_RS485Manager.py
utils/lightbar_utils/: pyproject.toml
utils/lightbar_utils/lightbar_utils/: apples.csv  coastline.csv  dark.csv  discretize_img.py  sunset.csv
