[tool.poetry]
name = "sunet-virtual-env"
version = "0.1.0"
description = ""
authors = ["Radu_Tolontan <radut@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.3"
numpy = "^2.1.3"
scipy = "^1.14.1"
pygame = "^2.6.1"
pyaudio = "^0.2.14"
sounddevice = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
